@@ -1,14 +1,37 @@
 language: python
+sudo: false
 python:
     - 2.6
     - 2.7
     - 3.2
     - 3.3
+    - 3.4
     - pypy
     - pypy3
 install:
     - pip install . --use-mirrors
 script:
-    - python setup.py test -q
+    - $PYTHON_EXE setup.py test -q
 notifications:
     email: false
+env:
+    - JYTHON=true
+    - JYTHON=false
+before_script: if [ "$JYTHON" == "true" ]; then export PYTHON_EXE=jython; jython -c "print ''"; else export PYTHON_EXE=python; fi
+before_install:
+  - export JYTHON_URL='http://search.maven.org/remotecontent?filepath=org/python/jython-installer/2.7-rc2/jython-installer-2.7-rc2.jar'
+  - if [ "$JYTHON" == "true" ]; then wget $JYTHON_URL -O jython_installer.jar; java -jar jython_installer.jar -s -d $HOME/jython; export PATH=$HOME/jython/bin:$PATH; fi
+matrix:
+  exclude:
+    - python: 2.6
+      env: JYTHON=true
+    - python: 3.2
+      env: JYTHON=true
+    - python: 3.3
+      env: JYTHON=true
+    - python: 3.4
+      env: JYTHON=true
+    - python: pypy
+      env: JYTHON=true
+    - python: pypy3
+      env: JYTHON=true
