@@ -1,4 +1,10 @@
 [tox]
+# Jython 2.7rc2 does work, but unfortunately has an issue running
+# with Tox 1.9.2 (apparently its non-interactive console still prints
+# interactive prompts ):
+#   $ tox -e jython
+#   ...
+#   ERROR: InvocationError: Failed to get version_info for jython: could not decode ">>> ... ... ... >>> {'version_info': (2, 7, 0, 'candidate', 2)}\n>>> "
 envlist =
     py26,py27,py32,py33,pypy,pypy3
 
@@ -8,6 +14,10 @@ commands =
 # without explicit deps, setup.py test will download a bunch of eggs into $PWD
 deps =
     zope.testing
+
+[testenv:jython]
+commands =
+   jython setup.py test -q
 
 [testenv:coverage]
 basepython =
