@@ -7,6 +7,8 @@ Change History
 - Code and ReST markup cosmetics.
   [alecghica]
 
+- Added Jython support.
+
 1.1.0 (2013-02-12)
 ==================
 
